@@ -1,3 +1,7 @@
+2004-07-02  ujwal
+
+	* Added support to drag selection from iTerm window.
+
 2004-06-15  fabian
 
 	* Fixed title problem in some web html files
